# swiflow-app

./: .dockerignore  .gitignore  Dockerfile  LICENSE-ADDENDUM.md  README.md  Taskfile.yml  build-win.sh  compose.yaml  fly.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: put-to-r2.yml  sync-to-r2.yaml
app/: go.mod  go.sum  main.go
app/demo/: hello.go  main_view.go  mini_panel.go  tray_menu.go
app/start/: env_fix.go  envfix.go  main.go  route.go  start.go
cmd/: main.go
docs/: PACKAGE.md  dev-build.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  README.md  main.ts
src-build/: agent.js  build-mac.sh  build.js  docker.js  version.js
src-core/: README.md  go.mod  go.sum  main.go
src-core/.test/: file-dir-list-files.xml  file-get-content.xml  file-put-content.xml  file-replace-text.xml  mixed-respond.xml  require-answer.xml  use-mcp-tools.xml  use-mysql-query.xml  use-self-tools.xml  user-input.xml
src-core/ability/: README.md  README_filetype_restriction.md  dev_async_cmd.go  dev_async_cmd_test.go  dev_command.go  dev_common.go  dev_windows.go  use_filesystem.go  use_filesystem_test.go  use_self_bots.go  use_self_tools.go
src-core/action/: action_consts.go  (+12 more)
src-docs/: PACKAGE.md  VALIDATE.md
src-front/: App.vue  main.ts
src-script/: agent.js  worker.js
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  notify.rs  server.rs  tray.rs
src-tauri/src/plugins/: deep_link.rs  fix_path_env.rs  inject_js_mixed.js  inject_js_plugin.rs  mod.rs
(+237 files in other folders)
