[package]
name = "Swiflow"
version = "0.7.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[target."cfg(not(target_os = \"windows\"))".dependencies]
strip-ansi-escapes = "0.2"

[dependencies]
log = "0.4"
dirs = "6"
home = "0.5"
thiserror = "2.0"
notify-rust = "4"
sysinfo = "0.35"
serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.5"
command-group = "5.0"
url = "2.5"  # 添加这个依赖用于URL解析
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.2", features = [
  "protocol-asset",  "devtools", 
  "tray-icon", "image-png"
] }

tauri-plugin-fs = "2.4.2"
tauri-plugin-log = "2.0.1"
tauri-plugin-http = "2.5.0"
tauri-plugin-store = "2.1.0"
tauri-plugin-shell = "2.1.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-devtools = "2.0.1"
tauri-plugin-deep-link = "2.4.2"
tauri-plugin-window-state = "2.1.0"
# fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
